--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,14 @@
   </head>
   <body>
     <h1>Lasagna</h1>
+    <img
+      src="https://www.allrecipes.com/thmb/HjSxkaBz-wb5XkTxWR6tulNCn1U=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Homemade-Lasagna-lutzflcat-1x1-1-2000-e0288086a287407f941a97e6e59f3eb7.jpg"
+      alt=""
+    />
+    <h4>Description</h4>
+    <p>
+      This is my mom's special homemade lasagna recipe with a meaty,
+      made-from-scratch tomato sauce and a deliciously cheesy filling.
+    </p>
   </body>
 </html>
