--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -16,5 +16,17 @@
       This is my mom's special homemade lasagna recipe with a meaty,
       made-from-scratch tomato sauce and a deliciously cheesy filling.
     </p>
+    <h4>Ingredients</h4>
+    <ul>
+      <li>Choice of Meat</li>
+      <li>Onion</li>
+      <li>Canned Tomatoes</li>
+      <li>Fresh Herbs</li>
+      <li>Sugar</li>
+      <li>Spices and Seasonings</li>
+      <li>Lasagna Noodles</li>
+      <li>Cheese</li>
+      <li>Eggs</li>
+    </ul>
   </body>
 </html>
