create ordered steps list

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -28,5 +28,13 @@
       <li>Cheese</li>
       <li>Eggs</li>
     </ul>
+    <h4>Steps</h4>
+    <ol>
+      <li>Cook the meat</li>
+      <li>Cook the lasagna noodles</li>
+      <li>Make the cheese layer</li>
+      <li>Assemble the Lasagna</li>
+      <li>Bake the Lasagna</li>
+    </ol>
   </body>
 </html>
