--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer"
-      >Lasagna</a
-    >
+    <ul>
+      <li>
+        <a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer"
+          >Lasagna</a
+        >
+      </li>
+      <li>
+        <a href="recipes/burgers.html" target="_blank" rel="noopener noreferrer"
+          >Burgers</a
+        >
+      </li>
+    </ul>
   </body>
 </html>
