--- a/recipes/burgers.html
+++ b/recipes/burgers.html
@@ -11,5 +11,19 @@
       src="https://www.allrecipes.com/thmb/5bbowF39Flo1sblOqjMQifuj1a8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/25473-the-perfect-basic-burger-DDMFS-4x3-56eaba3833fd4a26a82755bcd0be0c54.jpg"
       alt=""
     />
+    <h4>Description</h4>
+    <p>
+      These burger patties are made with ground beef and an easy bread crumb
+      mixture. Nothing beats a simple hamburger on a warm summer evening. Pile
+      these burgers with your favorite condiments and pop open a cool drink!
+    </p>
+    <h4>Ingredients</h4>
+    <ul>
+      <li>One large Egg</li>
+      <li>Half teaspoon salt</li>
+      <li>Half teaspoon ground black pepper</li>
+      <li>One pound ground beef</li>
+      <li>Half cup fine dry bread crumbs</li>
+    </ul>
   </body>
 </html>
