create steps to prepare list

--- a/recipes/burgers.html
+++ b/recipes/burgers.html
@@ -25,5 +25,17 @@
       <li>One pound ground beef</li>
       <li>Half cup fine dry bread crumbs</li>
     </ul>
+    <h4>Steps to prepare</h4>
+    <ol>
+      <li>Preheat an outdoor grill for high heat and lightly oil grate</li>
+      <li>Whisk together egg, salt, and pepper in a medium bowl</li>
+      <li>
+        Add ground beef and bread crumbs and mix with your hands or a fork until
+        well blended
+      </li>
+      <li>Form into four 3/4-inch-thick patties</li>
+      <li>Place patties on preheated grill. Cook 6 to 8 minutes per side</li>
+      <li>Seerve hot and enjoy!</li>
+    </ol>
   </body>
 </html>
